Fixed title in the html file

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <title>New React App</title>
+    <title>Random Quote Generator</title>
   </head>
   <body>
     <div id="root"></div>
