--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;1,700&display=swap"
       rel="stylesheet"
     />
-    <title>Random Quote Generator</title>
+    <title>Quote Generator | Marcelo Gutiérrez</title>
   </head>
   <body>
     <div id="root"></div>
